k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devops-portfolio
  namespace: default
  labels:
    app: devops-portfolio
spec:
  replicas: 2
  selector:
    matchLabels:
      app: devops-portfolio
  template:
    metadata:
      labels:
        app: devops-portfolio
    spec:
      containers:
      - name: devops-portfolio
        image: ogabek0331/devops-portfolio:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
          name: http
        resources:
          requests:
            memory: "64Mi"
            cpu: "100m"
          limits:
            memory: "128Mi"
            cpu: "200m"
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 10
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 5
