k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops-portfolio
  namespace: default
  labels:
    app: devops-portfolio
spec:
  type: ClusterIP
  selector:
    app: devops-portfolio
  ports:
  - name: http
    port: 80
    targetPort: 80
    protocol: TCP
